fix issue with forecast on small screens

--- a/src/screens/DashboardPage/components/Forecast/styles.scss
+++ b/src/screens/DashboardPage/components/Forecast/styles.scss
@@ -37,6 +37,10 @@
 
   &__row {
     display: flex;
+
+    .grid-col-2 {
+      margin-bottom: 0;
+    }
   }
 
   &__col {
